--- a/client/templates/restore.hbs
+++ b/client/templates/restore.hbs
@@ -23,7 +23,7 @@
                     </form>
                 </div>
                 <div class="b-authorization__fix">
-                    <button type="button" name="button" class="button button--block b-authorization__button">отпарвить</button>
+                    <button type="button" name="button" class="button button--b button--block b-authorization__button">отпарвить</button>
                     <div class="b-authorization__link-group">
                         <a href="#" class="b-authorization__link b-authorization__link--l sign-in">{{i18n 'Sign In'}}</a>
                         <a href="#" class="b-authorization__link b-authorization__link--r sign-up">{{i18n 'Sign Up'}}</a>
