--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1080,13 +1080,13 @@ fieldset[disabled] a.button {
   background-color: transparent;
   border-color: #000; }
   .button:hover {
-    color: #fff;
-    background-color: #000000;
-    border-color: transparent; }
+    color: #000;
+    background-color: transparent;
+    border-color: black; }
   .button:focus, .button.focus {
-    color: #fff;
-    background-color: #000000;
-    border-color: transparent; }
+    color: #000;
+    background-color: transparent;
+    border-color: black; }
   .button:active, .button.active {
     color: #000;
     background-color: transparent;
@@ -1221,8 +1221,7 @@ select::-ms-expand {
   display: none; }
 
 .body-fixed {
-  position: fixed;
-  overflow: hidden; }
+  background-color: #f5f5f5; }
 
 .word {
   cursor: pointer;
@@ -1279,6 +1278,9 @@ select::-ms-expand {
   .col-xs-9 {
     padding-left: 15px;
     padding-right: 15px; } }
+
+.episode-more {
+  cursor: pointer; }
 
 .h-mobil {
   position: fixed;
@@ -1358,17 +1360,12 @@ select::-ms-expand {
   .h__language {
     font-size: 1.2rem;
     text-align: center;
-    background-color: #394778; }
-    .h__language select {
-      padding: 1.4rem 0.6rem;
-      background: #394778;
-      border: 0;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      text-indent: 0.01px;
-      text-overflow: '';
-      -ms-appearance: none;
-      appearance: none !important; }
+    background-color: #394778;
+    position: relative; }
+    .h__language-select {
+      line-height: 45px;
+      cursor: pointer;
+      display: block; }
   .h__my-words {
     display: none; }
   .h__authorization {
@@ -1692,7 +1689,8 @@ select::-ms-expand {
       background-color: transparent;
       border: 0;
       padding: 1rem;
-      vertical-align: middle; }
+      vertical-align: middle;
+      height: 45px; }
     .b-button-settings__button-settings .icon-settings {
       width: 2.5rem;
       height: 2.5rem;
@@ -1836,7 +1834,12 @@ select::-ms-expand {
     .b-dictionaries-block__top:after {
       clear: both; }
     .b-dictionaries-block__top-sort {
-      float: left; }
+      float: left;
+      position: relative;
+      cursor: pointer; }
+      .b-dictionaries-block__top-sort .b-select {
+        width: 200px;
+        left: 0; }
     .b-dictionaries-block__top-auto {
       float: right;
       font-size: 1rem;
@@ -1879,7 +1882,8 @@ select::-ms-expand {
     text-align: center;
     padding: 1rem 0;
     background-color: #fff;
-    border-top: 1px solid #e5e5e5; }
+    border-top: 1px solid #e5e5e5;
+    display: none; }
 
 @media (min-width: 768px) {
   .b-dictionaries-block {
@@ -2158,6 +2162,8 @@ select::-ms-expand {
       display: block;
       width: 200px;
       margin: 0 auto; }
+  .b-authorization__err {
+    text-align: center; }
   .b-authorization__close {
     position: absolute;
     background-color: transparent;
@@ -2185,13 +2191,13 @@ select::-ms-expand {
     .b-authorization__form-message {
       color: #979797;
       font-size: 1.2rem;
-      margin-top: 40px; }
+      margin: 40px 0; }
     .b-authorization__form input {
       border: 0;
       border-radius: 0;
       border-bottom: 1px solid #e5e5e5;
       background-color: transparent;
-      padding: 1.4rem 1rem;
+      margin: 1.4rem 1rem;
       width: 100%;
       line-height: 36px;
       color: #757474;
@@ -2242,7 +2248,7 @@ select::-ms-expand {
     font-size: 14px;
     color: #000;
     display: block;
-    padding: 20px 0; }
+    padding: 12px 0; }
     .b-authorization__link--r {
       float: right; }
     .b-authorization__link--l {
@@ -2255,7 +2261,10 @@ select::-ms-expand {
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.3);
     font-size: 1.4rem; }
   .b-authorization__fix {
-    position: relative; }
+    position: relative;
+    bottom: auto;
+    left: auto;
+    right: auto; }
 
 @media (min-width: 768px) {
   .b-authorization__block {
@@ -2275,7 +2284,49 @@ select::-ms-expand {
       float: left; }
   .b-authorization__fix {
     position: relative;
-    bottom: -50px; } }
+    bottom: auto;
+    left: auto;
+    right: auto; } }
+
+@media (min-height: 550px) and (max-height: 767px) and (max-width: 768px) {
+  .b-authorization__fix {
+    position: fixed;
+    bottom: 0;
+    left: 15px;
+    right: 15px; } }
+
+@media (min-height: 768px) and (max-height: 1000px) and (min-width: 1000px) and (max-width: 1030px) {
+  .b-authorization__block {
+    padding: 30px 15px 25px; } }
+
+.b-select {
+  display: none;
+  position: absolute;
+  top: 35px;
+  left: 10px;
+  right: 10px;
+  background: #fff;
+  color: #000;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  z-index: 9999;
+  min-height: 100%;
+  overflow-x: auto;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2); }
+  .b-select--visibility {
+    display: block; }
+  .b-select ul {
+    width: 100%; }
+  .b-select li {
+    padding-bottom: 10px; }
+    .b-select li input[type=radio] {
+      display: none; }
+    .b-select li input[type=radio]:checked + label {
+      border-bottom: 2px solid #000; }
+    .b-select li label {
+      cursor: pointer; }
 
 .p-main {
   width: 100%;
@@ -2285,6 +2336,8 @@ select::-ms-expand {
     width: 100%;
     color: #000;
     font-size: 1.2rem; }
+  .p-main--fix {
+    display: none; }
 
 @media (min-width: 768px) {
   .p-main--pad6 {
