--- a/client/templates/register.hbs
+++ b/client/templates/register.hbs
@@ -24,7 +24,7 @@
                     </form>
                 </div>
                 <div class="b-authorization__fix">
-                    <button type="button" name="button" class="button button--block b-authorization__button sign-login">{{i18n 'Sign Up'}}</button>
+                    <button type="button" name="button" class="button button--b button--block b-authorization__button sign-login">{{i18n 'Sign Up'}}</button>
                     <div class="b-authorization__link-group">
                         <a href="#" class="b-authorization__link b-authorization__link--l sign-in">{{i18n 'Sign In'}}</a>
                         <a href="#" class="b-authorization__link b-authorization__link--r login-m-form-restore ">{{i18n 'Forgot password'}}</a>
