episode title click event

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -2,7 +2,7 @@
     {{#if singlePage}}
         <a>{{{ processedTitle }}}</a>
     {{else}}
-        <a href="#/episode/{{_id}}" target="_blank">{{ title }}</a>
+        <a class="episode-link" href="#/episode/{{_id}}" target="_blank">{{ title }}</a>
     {{/if}}
 </div>
 <div class="b-episode__top">
